@@ -234,6 +234,15 @@ api_docs_other = {
                       "curl --form 'account_key_file_le_meta=@meta.json' 'account_key_file_le_pkey=@private_key.json' 'account_key_file_le_reg=@regr.json' {ADMIN_PREFIX}/account-key/upload.json",
                       ],
          },
+        {'endpoint': '/account-key/{ID}/authenticate.json',
+         'about': """authenticate the key against the provider's new-reg endpoint""",
+         'POST': True,
+         'GET': None,
+         'args': """This route is self-documenting on GET requests""",
+         'examples': ["curl http://127.0.0.1:7201/.well-known/admin/account-key/1/authenticate.json",
+                      "curl -X POST http://127.0.0.1:7201/.well-known/admin/account-key/1/authenticate.json"
+                      ],
+         },
         {'endpoint': '/account-key/{ID}/mark.json',
          'about': """mark the key""",
          'POST': True,
